# Document-Query-Assistant

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  README.md  TXT_FIX_GUIDE.md  TXT_TROUBLESHOOTING.md  app.py  diagnose_pdf.py  diagnose_txt.py  index.html  pyproject.toml  requirements.txt  test_txt.py  test_txt_simple.py
.github/workflows/: ci-cd.yml
.streamlit/: config.toml  secrets.toml.example
config/: __init__.py  settings.py
services/: __init__.py  chunker.py  document_parser.py  embedding.py  gemini_service.py  vector_db.py
tests/: test_document_parser.py  test_session_manager.py  test_settings.py
utils/: __init__.py  session_manager.py
